// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Layout should render correctly when layout is dialog 1`] = `
<div>
  <div
    class="css-uagn6w"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="youtube-dialog-wrapper"
  >
    <div
      aria-label="Video label"
      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium YoutubeVideo-thumbnail css-11nrv4h-MuiButtonBase-root-MuiButton-root"
      data-testid="thumbnail"
      role="button"
      tabindex="0"
    >
      <img
        alt="Alt text"
        class="css-qri583"
        data-nimg="1"
        decoding="async"
        draggable="false"
        focalpoint="[object Object]"
        height="100"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=128&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75 2x"
        style="color: transparent; object-fit: cover; object-position: center;"
        width="100"
      />
      <span
        class="css-1ptr1nd"
      >
        Video label
      </span>
      <div
        aria-label="Video label"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-testid="thumbnail-button"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PlayArrowIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 5v14l11-7z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </div>
</div>
`;

exports[`Video Layout should render correctly when layout is in-place 1`] = `
<div>
  <div
    class="YoutubeVideo-inPlace css-uagn6w"
    data-testid="youtube-inplace-wrapper"
  >
    <react-player
      classname="css-adv66b"
      data-testid="youtube-inplace-react-player"
      height="9"
      loop="true"
      muted="true"
      width="16"
    />
  </div>
</div>
`;

exports[`Video Preview Media should render correctly if 'focalPoint' is null 1`] = `
<div>
  <div
    class="YoutubeVideo-inline css-g8q1iy"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="youtube-inline-wrapper"
  >
    <div>
      <img
        alt="Alt text"
        class="css-qri583"
        data-nimg="1"
        decoding="async"
        draggable="false"
        height="100"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=128&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75 2x"
        style="color: transparent; object-fit: cover; object-position: center;"
        width="100"
      />
      <div
        class="YoutubeVideo-overlay"
      >
        <button
          aria-label="Video label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="icon-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Video subtitle
        </p>
      </div>
    </div>
    <div
      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
    >
      <react-player
        config="[object Object]"
        controls="true"
        data-testid="youtube-inline-react-player"
        light="true"
        playing="false"
        url="http://localhost:8080/video.mp4"
      />
    </div>
  </div>
</div>
`;

exports[`Video Preview Media should render correctly if 'previewMedia' is undefined 1`] = `
<div>
  <div
    class="YoutubeVideo-inline css-g8q1iy"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="youtube-inline-wrapper"
  >
    <div>
      <img
        alt="Video label"
        class="css-qri583"
        data-testid="youtube-preview-image"
        draggable="false"
        src="http://localhost:8080/default-image.jpg"
      />
      <div
        class="YoutubeVideo-overlay"
      >
        <button
          aria-label="Video label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="icon-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Video subtitle
        </p>
      </div>
    </div>
    <div
      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
    >
      <react-player
        config="[object Object]"
        controls="true"
        data-testid="youtube-inline-react-player"
        light="true"
        playing="false"
        url="http://localhost:8080/video.mp4"
      />
    </div>
  </div>
</div>
`;

exports[`Video Preview Media should render correctly if 'src' is undefined 1`] = `
<div>
  <div
    class="YoutubeVideo-inline css-g8q1iy"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="youtube-inline-wrapper"
  >
    <div>
      <img
        alt="Alt text"
        class="css-qri583"
        data-nimg="1"
        decoding="async"
        draggable="false"
        focalpoint="[object Object]"
        height="100"
        src=""
        style="color: transparent; object-fit: cover; object-position: center;"
        width="100"
      />
      <div
        class="YoutubeVideo-overlay"
      >
        <button
          aria-label="Video label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="icon-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Video subtitle
        </p>
      </div>
    </div>
    <div
      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
    >
      <react-player
        config="[object Object]"
        controls="true"
        data-testid="youtube-inline-react-player"
        light="true"
        playing="false"
        url="http://localhost:8080/video.mp4"
      />
    </div>
  </div>
</div>
`;

exports[`Video Preview Media should render correctly if 'type' is descriptive 1`] = `
<div>
  <div
    class="YoutubeVideo-inline css-g8q1iy"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="youtube-inline-wrapper"
  >
    <div>
      <img
        alt="Alt text"
        class="css-qri583"
        data-nimg="1"
        decoding="async"
        draggable="false"
        focalpoint="[object Object]"
        height="100"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=128&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75 2x"
        style="color: transparent; object-fit: cover; object-position: center;"
        type="Descriptive"
        width="100"
      />
      <div
        class="YoutubeVideo-overlay"
      >
        <button
          aria-label="Video label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="icon-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Video subtitle
        </p>
      </div>
    </div>
    <div
      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
    >
      <react-player
        config="[object Object]"
        controls="true"
        data-testid="youtube-inline-react-player"
        light="true"
        playing="false"
        url="http://localhost:8080/video.mp4"
      />
    </div>
  </div>
</div>
`;

exports[`Video Preview Media should render correctly if 'type' is null 1`] = `
<div>
  <div
    class="YoutubeVideo-inline css-g8q1iy"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="youtube-inline-wrapper"
  >
    <div>
      <img
        alt="Alt text"
        class="css-qri583"
        data-nimg="1"
        decoding="async"
        draggable="false"
        focalpoint="[object Object]"
        height="100"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=128&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75 2x"
        style="color: transparent; object-fit: cover; object-position: center;"
        width="100"
      />
      <div
        class="YoutubeVideo-overlay"
      >
        <button
          aria-label="Video label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="icon-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Video subtitle
        </p>
      </div>
    </div>
    <div
      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
    >
      <react-player
        config="[object Object]"
        controls="true"
        data-testid="youtube-inline-react-player"
        light="true"
        playing="false"
        url="http://localhost:8080/video.mp4"
      />
    </div>
  </div>
</div>
`;

exports[`Video renders correctly with everything populated 1`] = `
<div>
  <div
    class="YoutubeVideo-inline example-classname css-g8q1iy"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="example-data-test-id"
  >
    <div>
      <img
        alt="Alt text"
        class="css-qri583"
        data-nimg="1"
        decoding="async"
        draggable="false"
        focalpoint="[object Object]"
        height="100"
        loading="lazy"
        src="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75"
        srcset="/_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=128&q=75 1x, /_next/image?url=http%3A%2F%2Flocalhost%3A8080%2Fimage.png&w=256&q=75 2x"
        style="color: transparent; object-fit: cover; object-position: center;"
        width="100"
      />
      <div
        class="YoutubeVideo-overlay"
      >
        <button
          aria-label="Video label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="icon-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Video subtitle
        </p>
      </div>
    </div>
    <div
      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
    >
      <react-player
        config="[object Object]"
        controls="true"
        data-testid="youtube-inline-react-player"
        light="true"
        playing="false"
        url="http://localhost:8080/video.mp4"
      />
    </div>
  </div>
</div>
`;

exports[`Video renders correctly with minimum populated 1`] = `
<div>
  <div
    class="YoutubeVideo-inline css-g8q1iy"
    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
    data-testid="youtube-inline-wrapper"
  >
    <div>
      <img
        class="css-qri583"
        data-nimg="1"
        decoding="async"
        draggable="false"
        src=""
        style="color: transparent;"
      />
      <div
        class="YoutubeVideo-overlay"
      >
        <button
          aria-label="Video label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="icon-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
          data-testid="typography"
        >
          Video subtitle
        </p>
      </div>
    </div>
    <div
      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
    >
      <react-player
        config="[object Object]"
        controls="true"
        data-testid="youtube-inline-react-player"
        light="true"
        playing="false"
        url="http://localhost:8080/video.mp4"
      />
    </div>
  </div>
</div>
`;
